# ULLTR

./: .gitignore  CLIENT_GUIDE.md  README.md  config.py  deploy.sh  expiry_manager.py  get_nifty_options.py  health_check.py  market_data_client.py  redis.conf  setup.py  setup_aws_vm.sh
api/: requirements.txt
api/app/: main.py
collector/: CMakeLists.txt  config.json
collector/proto/: MarketDataFeedV3.pb.cc  MarketDataFeedV3.pb.h  MarketDataFeedV3.proto
collector/src/: candle_manager.cpp  candle_manager.hpp  main.cpp
forward_tester_twap/: data_client.py  engine.py  position.py  run.py  seed_clickhouse.py  twap_config.py
login/: auth.py
scratch/: test_candle_api.py  verify_redis_candles.py
